# epii

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: merge-main-checks.yml
epii/: main.py
epii/controller/: __init__.py  controller.py
epii/model/: model.py
epii/model/notes/: note.py
epii/model/read_notes/: __init__.py  note.py
epii/notes/: example.yaml
epii/view/: view.py
epii/view/buttons/: __init__.py  base_buttons.py  nav_buttons.py  update_buttons.py
epii/view_model/: __init__.py  direction.py  view_model.py
tests/: test_controller.py  test_main.py  test_model.py  test_note.py  test_view.py  test_view_model.py  utils.py
tests/controller/: test_controller.py
tests/model/: test_model.py
tests/notes/: test_note.py
tests/view/: test_view.py
tests/view_model/: test_view_model.py
